rename subscriber, cart API entities
